# stock_school

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
01-basics/: index.html
01-basics/dividend/: index.html
01-basics/etf-costs-and-premium/: index.html
01-basics/etf-intro/: index.html
01-basics/first-trade-walkthrough/: index.html
01-basics/futures-intro/: index.html
01-basics/ipo-subscription/: index.html
01-basics/market-overview/: index.html
01-basics/mutual-fund-intro/: index.html
01-basics/open-account/: index.html
02-glossary/: index.html
03-tables/: index.html
04-charts/: index.html
05-analysis/: index.html
06-risk/: index.html
07-cases/: index.html
08-investing/: index.html
09-advanced/: index.html
10-persona/: index.html
ARCHITECTURE/: index.html
ARTICLE-REVIEW-PLAN/: index.html
CHART-CHECKLIST/: index.html
CONTENT-COVERAGE-MATRIX/: index.html
INVESTMENT-REVIEW-CHECKLIST/: index.html
PAGE-STRUCTURE-GUIDE/: index.html
STYLE-GUIDE/: index.html
docs/: ARCHITECTURE.md  ARTICLE-REVIEW-PLAN.md  CHART-CHECKLIST.md  CONTENT-COVERAGE-MATRIX.md  INVESTMENT-REVIEW-CHECKLIST.md  PAGE-STRUCTURE-GUIDE.md  STYLE-GUIDE.md  index.md
docs/04-charts/: kd.md  (+17 more)
reports/: investment-review.md  link-audit.md
scripts/: chart_common.py  check_links.py  gen_candle_svgs.py  gen_case_svgs.py  gen_indicator_svgs.py  gen_quote_charts.py  generate_all.py
search/: search_index.json
tests/: conftest.py  test_chart_assets.py  test_indicators.py  test_link_audit.py  test_table_coverage.py
(+259 files in other folders)
